created weapon selector

--- a/MonsterHunterCodex/MonsterHunterCodex/MonsterHunterCodex.csproj
+++ b/MonsterHunterCodex/MonsterHunterCodex/MonsterHunterCodex.csproj
@@ -229,6 +229,7 @@
     <Content Include="Scripts\vue.js" />
     <Content Include="Scripts\vue.min.js" />
     <Content Include="Vue\Components\gearTile.js" />
+    <Content Include="Vue\Components\weaponSelector.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
