--- a/MonsterHunterCodex/MonsterHunterCodex/MonsterHunterCodex.csproj
+++ b/MonsterHunterCodex/MonsterHunterCodex/MonsterHunterCodex.csproj
@@ -233,6 +233,7 @@
     <Content Include="Scripts\umd\popper.min.js" />
     <Content Include="Scripts\vue.js" />
     <Content Include="Scripts\vue.min.js" />
+    <Content Include="Vue\Components\gearSelection.js" />
     <Content Include="Vue\Components\gearTile.js" />
     <Content Include="Vue\Components\weaponSelector.js" />
     <Content Include="Web.config" />
